src/test/ui/parser/issue-24780.stderr
error: unmatched angle bracket
  --> $DIR/issue-24780.rs:5:23
   |
LL | fn foo() -> Vec<usize>> {
   |                       ^^ help: remove extra angle bracket

error: aborting due to previous error

